# amsterdam-django-oidc

./: .dockerignore  .gitignore  Containerfile  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
amsterdam_django_oidc/: __init__.py
src/amsterdam_django_oidc/: __init__.py
stubs/mozilla_django_oidc/: auth.pyi
tests/: conftest.py  settings.py  test_oidc_authentication_backend.py  urls.py  views.py
