[project]
name = "amsterdam-django-oidc"
version = "0.1.0"
description = ""
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mozilla-django-oidc (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
